fix: Prevents the navbar from being covered

--- a/CreateMixPage.css
+++ b/CreateMixPage.css
@@ -62,9 +62,6 @@ body {
 }
 
 .transparent-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(66, 65, 65, 0.5);
